# Home_work_web_14

./: .coverage  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: cbbeba9a7a6b_add_verify_for_user.py
src/conf/: config.py
src/entity/: models.py
src/repository/: todos.py  users.py
src/routes/: auth.py  todos.py  users.py
src/schemas/: todo.py  user.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: reset_password.html
src/templates/: index.html
tests/: test_auth.py  test_unit_repository.py  test_users.py
